# RimEdit

./: .gitattributes  README.md  index.html  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/build_support/: file_collection.rs  path_safety.rs
src-tauri/icons/: icon.icns
src-tauri/src/: diagnostics.rs  instrumentation.rs  lib.rs  locale.rs  main.rs  patches.rs  project_files.rs  project_model.rs  project_save.rs  project_validation.rs  rimworld_load_folders.rs  schema_pack.rs  settings_store.rs  xml_document.rs
src-tauri/src/commands/: create_def.rs  def_index.rs  def_templates.rs  form_views.rs  graphic_preview.rs  instrumentation.rs  mod.rs  patches.rs  project_files.rs  project_settings.rs  project_validation.rs  schema_catalog.rs  xml_editor.rs  xml_save.rs
src-tauri/src/def_index/: builder.rs  cache.rs  fingerprint.rs  mod.rs  model.rs  overlay.rs  query.rs  state.rs
src-tauri/src/def_templates/: error.rs  mod.rs  model.rs  store.rs
src-tauri/src/form_views/: error.rs  mod.rs  model.rs  store.rs
src-tauri/src/patches/: apply.rs  cache.rs  custom_metadata.rs  dom.rs  fingerprint.rs  impact_graph.rs  index.rs  inheritance.rs  model.rs  parser.rs  scan.rs  serializer.rs  state.rs  value_xml.rs  xpath.rs
src-tauri/src/project_files/: error.rs  model.rs  mutations.rs  paths.rs  read.rs  scan.rs  tests.rs
src-tauri/src/schema_pack/: cache.rs  loader.rs  locale.rs  lookup.rs  merge.rs  model.rs
src-tauri/src/services/: app_paths.rs  def_index_cache.rs  graphic_preview.rs  (+5 more)
src-tauri/tests/: integration.rs
(+1859 files in other folders)
